# wlsplit

./: Cargo.toml  LICENSE  README.md
src/: config.rs  file.rs  main.rs  terminal.rs  time_format.rs  wl_split_timer.rs
src/display/: mod.rs  terminal.rs
src/display/null/: mod.rs  null.rs
src/display/smithay/: mod.rs  smithay.rs
src/display/terminal/: mod.rs  terminal.rs
src/event/: events.rs  mod.rs
wlsplitctl/: main.rs
