[package]
name = "wlsplit"
version = "0.1.0"
authors = ["Tobias Langendorf <junglerobba@jngl.one>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
livesplit-core = "*"
clap = "*"
chrono = "*"
termion = "*"
tui = { version = "0.10.0", features = ["crossterm"], default-features = false }
rand = "*"
crossterm = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"

tokio = {version="1.0.1", features=["full"]}
tokio-util = {version="0.6.0", features=["codec"]}
async-trait = "0.1.42"
