[package]
name = "wlsplit"
version = "0.1.0"
authors = ["Tobias Langendorf <junglerobba@jngl.one>"]
edition = "2018"
default-run = "wlsplit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
livesplit-core = "*"
clap = "*"
chrono = "*"
termion = "*"
tui = { version = "0.10.0", features = ["crossterm"], default-features = false }
rand = "*"
crossterm = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"
smithay-client-toolkit = "0.14.0"

[[bin]]
name = "wlsplit"
path = "src/main.rs"

[[bin]]
name = "wlsplitctl"
path = "wlsplitctl/main.rs"
