[package]
name = "wlsplit"
version = "0.1.0"
authors = ["Tobias Langendorf <junglerobba@jngl.one>"]
edition = "2018"
default-run = "wlsplit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
livesplit-core = "0.11.0"
clap = "2.33.3"
chrono = "0.4.19"
tui = { version = "0.10.0", features = ["crossterm"], default-features = false }
crossterm = "0.19.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
smithay-client-toolkit = "0.14.0"
andrew = "0.3.1"
font-kit = "0.10.0"
confy = "0.4.0"

[[bin]]
name = "wlsplit"
path = "src/main.rs"

[[bin]]
name = "wlsplitctl"
path = "wlsplitctl/main.rs"
